<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".Activities.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview6"
                android:textSize="50sp"
                android:textColor="@color/white"
                android:layout_marginTop="128dp"
                android:layout_marginStart="32dp"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:hint="@string/hin1"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:ems="10"
                android:background="@drawable/edittext_background"
                android:inputType="textPersonName"
                android:layout_marginTop="128dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:hint="@string/hin2"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:ems="10"
                android:background="@drawable/edittext_background"
                android:inputType="textPassword"
                android:layout_marginTop="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview7"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginTop="16dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginBtn"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/orange_button_background"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/white"

                android:text="@string/btn2" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>